# DTBalancingPlate

./: .gitignore  README.md
BalancingPlateApp/BalancingPlate.xcodeproj/: project.pbxproj
BalancingPlateApp/BalancingPlate.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BalancingPlateApp/QRScanner/: AppDelegate.swift
BalancingPlateApp/QRScanner/Base.lproj/: LaunchScreen.storyboard
BalancingPlateApp/QRScanner/Controller/: DetailViewController.swift  QRScannerViewController.swift
Matlab/: pidball.m
Projektbericht Balancing Plate/: arbeit.aux  arbeit.bbl  arbeit.blg  arbeit.dvi  arbeit.lof  arbeit.lot  arbeit.out.ps  arbeit.tex  arbeit.tex.bak  arbeit.toc  quellen.bib
RaspberryPi/: CMakeLists.txt  go.sh  logo2.txt
RaspberryPi/extras/: logo3.txt  send.py
RaspberryPi/include/: exceptionHandling.h
RaspberryPi/src/: logo1.txt  main.cpp  main.cpp.orig  pid.cpp  pid.h
RaspberryPi/src/kalman/: simpleKalman.cpp  simpleKalman.hpp  simpleKalmanTest.cpp
RaspberryPi/src/messageDecoding/: messageDecoding.cpp  messageDecoding.h
RaspberryPi/src/plateFilter/: plateFilter.cpp  plateFilter.h
RaspberryPi/src/socketReceiver/: socketReceiver.cpp  socketReceiver.h
RaspberryPi/src/uart/: uart_raspi.cpp  uart_raspi.cpp.orig  uart_raspi.h
Vorlage-Projektbericht Balancing Plate/: arbeit.aux  arbeit.blg  arbeit.lof  arbeit.lot  arbeit.synctex(busy)  arbeit.tex  arbeit.tex.bak  arbeit.toc  quellen.bib
Vorlage-Projektbericht Balancing Plate/lib/: commands.tex
XMC/: .cproject  .gitignore  .project  TouchPlate.c  TouchPlate.h  globals.h  main.c  main.c.orig  solver.bak  uartCom.c  uartCom.h
XMC/Dave/: .dconfig  .dconfig.orig
XMC/Release/: Balancing_Plate.elf  Balancing_Plate.elf.orig  Balancing_Plate.hex  Balancing_Plate.hex.orig  Balancing_Plate.lst  Balancing_Plate.lst.orig  Balancing_Plate.map  Balancing_Plate.map.orig  TouchPlate.d  TouchPlate.o.lst  main.d  main.d.orig  main.o.lst  main.o.lst.orig  main.o.orig  makefile  objects.rsp  objects.rsp.orig  sources.mk  subdir.mk  uartCom.d  uartCom.o.lst
(+123 files in other folders)
